// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dsh keyless credential journey snapshots > reports the missing credential once, stays usable, and survives resume 1`] = `
"› say hi

› say hi again

MISSING_CREDENTIAL: llm-deepseek: no API key for provider route "deepseek-official"; store
DEEPSEEK_API_KEY through the credentials service (the web Models page writes it), or export
DEEPSEEK_API_KEY in the launching environment


















────────────────────────────────────────────────────────────────────────────────────────────────────
 still usable
────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 13.1k/1000.0k (1%) · /help  ctrl+c
 exit"
`;

exports[`dsh keyless credential journey snapshots > reports the missing credential once, stays usable, and survives resume 2`] = `
"› say hi

› say hi again

MISSING_CREDENTIAL: llm-deepseek: no API key for provider route "deepseek-official"; store
DEEPSEEK_API_KEY through the credentials service (the web Models page writes it), or export
DEEPSEEK_API_KEY in the launching environment


















────────────────────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ready · workspace-write · deepseek-official/deepseek-v4-flash · 13.1k/1000.0k (1%) · /help  ctrl+c
 exit"
`;
